tests/pass/Simple.java
// Copyright 2013 Bill Campbell, Swami Iyer and Bahar Akbal-Delibas

package pass;

class Simple {

    {;}

    public void simple()
    {
        ;
    }

    public void complex()
    {
        ;
    }

    public static void semi()
    {
        ;
    }

    static void numu() {
        ;
    }

    void none()
    {
        ;
    }


}